--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <center>
-        <h1>Welcome to Home Page</h1>       
+        <h1>Welcome to Home Page!</h1>       
         <p>Lorem ipsum dolor sit amet consectetur adip
             isicing elit. Ut similique explicabo quasi eius laborum, enim praesentium quia corrupti illo soluta a adipisci fugiat corporis quibusdam natus, beatae, accusamus illum eaque!</p>
     </center>
